--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 // specification: https://www.google.com/design/spec/components/buttons.html
 
 // bmd default buttons are flat by default
@@ -101,8 +103,8 @@
       width: $bmd-btn-fab-font-size;
       line-height: $bmd-btn-fab-font-size;
       transform: translate(
-        -($bmd-btn-fab-font-size / 2),
-        -($bmd-btn-fab-font-size / 2)
+        -(math.div($bmd-btn-fab-font-size, 2)),
+        -(math.div($bmd-btn-fab-font-size, 2))
       );
     }
   }
