--- a/scss/mixins/_utilities.scss
+++ b/scss/mixins/_utilities.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 @function calc-top($line-height-base, $font-size, $component-height) {
   @return (($line-height-base * $font-size) - $component-height) / 2; // vertical center of line-height
 }
@@ -19,13 +21,13 @@
     $color-brightness: brightness($color);
     $dark-text-brightness: brightness($dark);
     $light-text-brightness: brightness($light);
-    @return if(abs($color-brightness - $light-text-brightness) > abs($color-brightness - $dark-text-brightness), $light, $dark);
+    @return if(math.abs($color-brightness - $light-text-brightness) > math.abs($color-brightness - $dark-text-brightness), $light, $dark);
   }
 }
 
 @function brightness($color) {
   @if type-of($color) == color {
-    @return (red($color) * 0.299 + green($color) * 0.587 + blue($color) * 0.114) / 255 * 100%;
+    @return math.div((red($color) * 0.299 + green($color) * 0.587 + blue($color) * 0.114), 255) * 100%;
   } @else {
     @return unquote("brightness(#{$color})");
   }
